tests/invalid/numbers/wrong_case.rs
/*
fail: 1
*/

main(): int {
    RETURN 0;
}